# teller-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md
src/: inquirer.rs  main.rs  utils.rs
src/api/: client.rs  error.rs  inform.rs  mod.rs
src/api/inform/: get_account_balance.rs  get_aggregates.rs  get_counterparties.rs  get_incoming.rs  get_outgoing.rs  get_transactions_with_currency.rs  mod.rs
src/api/mocks/: fail-authentication.http  get-account.http  get-accounts.http  get-transactions.http
src/cli/: arg_types.rs  mod.rs  parse.rs
src/client/: mod.rs
src/command/: do_nothing.rs  initialise.rs  list_accounts.rs  list_balances.rs  list_counterparties.rs  list_incomings.rs  list_outgoings.rs  list_transactions.rs  mod.rs  representations.rs  show_balance.rs  show_incoming.rs  show_outgoing.rs  show_usage.rs
src/config/: error.rs  mod.rs
src/inquirer/: ask.rs  mod.rs
