[package]
name = "teller_cli"
version = "0.0.9"
authors = ["Seb Insua <me@sebinsua.com>"]

[[bin]]
name = "teller"
path = "src/main.rs"

[dependencies]
log = "0.3"
env_logger = "0.3"
docopt = "0.6"
rustc-serialize = "0.3"
hyper = "0.9"
tabwriter = "0.1"
chrono = "0.2"
itertools = "0.4"

[dev-dependencies]
yup-hyper-mock = "1.3"
